[package]
name = "compressed_log_sink"
version = "0.1.0"
authors = ["Michał Papierski <michal@papierski.net>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = { version = "0.7.16", features = ["ssl"] }
futures = "0.1.25"
lz4 = "1.23.1"
docopt = "1"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.6"
openssl = "0.10"